<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medical Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="convertPatientTitle">Convert Patient Weight</string>
    <string name="convertBtn">CONVERT WEIGHT</string>
    <string name="resultText"></string>
    <string name="convertToKilogram">Convert Pounds to Kilograms</string>
    <string name="convertToPounds">Convert Kilograms to Pounds</string>
    <string name="hintText">Weight of Patient</string>

</resources>
